Crash - Regression - GPU Intel HD 4000 - Blender 2.81 #69382

Closed
opened 2019-09-01 16:37:07 +02:00 by noki paike · 4 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5069

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-31 17:53, hash: 883706395e
Worked: Blende 2.80 Official

Short description of error
on a more complex scene, like race-spaceship or mr_elephant, blender crash if you go in eevee mode Material or Rendered.

with blender 2.80 official works perfectly.

possible cause of the problem and solution

On this GPU drivers workarounds had been created.

Probably Changes been made to the blender code recently, bypass these workarounds.

GPU: Split gpu_shader_material into multiple files.
https://developer.blender.org/rB8cd0da88e55a0c0f88297a5f0f770eb40acc6219

Because I tried to perform the same operations starting blender with "blender_debug_gpu_glitchworkaround.cmd" file and all works fine, no crash.
Probably with the updates where made, samething breaks the workarounds that were created.


info log of crash.

blender_system_info.txt

blender_debug_output.txt


log starting blender with blender_debug_gpu_glitchworkaround.cmd NO CRASH

blender_debug_output_blender_debug_gpu_glitchworkaroundcmd.txt

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5069 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-31 17:53, hash: `883706395e` Worked: Blende 2.80 Official **Short description of error** on a more complex scene, like race-spaceship or mr_elephant, blender crash if you go in eevee mode Material or Rendered. with blender 2.80 official works perfectly. **possible cause of the problem and solution** On this GPU drivers workarounds had been created. Probably Changes been made to the blender code recently, bypass these workarounds. GPU: Split gpu_shader_material into multiple files. https://developer.blender.org/rB8cd0da88e55a0c0f88297a5f0f770eb40acc6219 Because I tried to perform the same operations starting blender with "blender_debug_gpu_glitchworkaround.cmd" file and all works fine, no crash. Probably with the updates where made, samething breaks the workarounds that were created. _______ info log of crash. [blender_system_info.txt](https://archive.blender.org/developer/F7712993/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F7712994/blender_debug_output.txt) ________ log starting blender with blender_debug_gpu_glitchworkaround.cmd NO CRASH [blender_debug_output_blender_debug_gpu_glitchworkaroundcmd.txt](https://archive.blender.org/developer/F7712999/blender_debug_output_blender_debug_gpu_glitchworkaroundcmd.txt)
Author

Added subscriber: @nokipaike

Added subscriber: @nokipaike
Germano Cavalcante self-assigned this 2019-09-02 13:39:09 +02:00

Added subscriber: @Rodrigo_S.T

Added subscriber: @Rodrigo_S.T

This issue was referenced by 2541d03917

This issue was referenced by 2541d03917b38d11596190b3f92215f765ad2de8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69382
No description provided.