Fix T69382: Crash - Regression - GPU Intel HD 4000

Workarounds were not being enabled for drivers like `10.18.10.5069`.